[package]
name = "things-rs"
version = "0.0.1"
edition = "2021"
authors = ["dalei <guoyunlei@live.com>"]
description = "Library to read data from your Things app"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "64-column-tables"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenvy = "0.15"