[package]
name = "things-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "64-column-tables", "chrono"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenvy = "0.15"
rocket = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }