[package]
name = "things-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
things-db = { path = "../things-db" }
rocket = { version = "0.5.0", features = [ "json"] }
diesel = { version = "2.1.0", features = ["sqlite", "64-column-tables"] }